--- a/.github/workflows/thecoder.yml
+++ b/.github/workflows/thecoder.yml
@@ -25,6 +25,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm install -g yarn
-    - run: yarn install
-    - run: yarn dev
+    - run: yarn instal
     - run: yarn build
