--- a/.github/workflows/thecoder.yml
+++ b/.github/workflows/thecoder.yml
@@ -25,5 +25,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm install -g yarn
-    - run: yarn instal
+    - run: yarn install
     - run: yarn build
